--- a/java_timetracking/build.gradle
+++ b/java_timetracking/build.gradle
@@ -9,20 +9,21 @@ repositories {
 }
 
 ext {
-    vertxVersion = '4.5.7'
+    vertxVersion = '4.5.8'
+    awsSdkVersion = '2.25.32'
 }
 
 dependencies {
     implementation "io.vertx:vertx-core:$vertxVersion"
     implementation "io.vertx:vertx-web:$vertxVersion"
-    implementation 'software.amazon.awssdk:dynamodb:2.25.32'
-    implementation 'software.amazon.awssdk:auth:2.25.32'
-    implementation 'software.amazon.awssdk:cognitoidentityprovider:2.25.32'
+    implementation "software.amazon.awssdk:dynamodb:$awsSdkVersion"
+    implementation "software.amazon.awssdk:auth:$awsSdkVersion"
+    implementation "software.amazon.awssdk:cognitoidentityprovider:$awsSdkVersion"
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
     implementation 'com.auth0:java-jwt:4.4.0'
     implementation 'com.auth0:jwks-rsa:0.22.1'
     implementation 'org.slf4j:slf4j-api:2.0.13'
-    runtimeOnly 'ch.qos.logback:logback-classic:1.4.14'
+    runtimeOnly 'ch.qos.logback:logback-classic:1.5.13'
     testImplementation "io.vertx:vertx-junit5:$vertxVersion"
     testImplementation "io.vertx:vertx-web-client:$vertxVersion"
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
@@ -48,10 +49,14 @@ shadowJar {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 test {
     useJUnitPlatform()
-} 
+}
+
+wrapper {
+    gradleVersion = '9.0'
+}
