--- a/react_timetracking/vercel.json
+++ b/react_timetracking/vercel.json
@@ -41,8 +41,8 @@
   ],
   "env": {
     "REACT_APP_AWS_REGION": "@AWS_REGION",
-    "REACT_APP_USER_POOL_ID": "@COGNITO_USER_POOL_ID",
-    "REACT_APP_CLIENT_ID": "@COGNITO_CLIENT_ID",
+    "REACT_APP_COGNITO_USER_POOL_ID": "@REACT_APP_COGNITO_USER_POOL_ID",
+    "REACT_APP_COGNITO_CLIENT_ID": "@REACT_APP_COGNITO_CLIENT_ID",
     "REACT_APP_NAME": "@react_app_name",
     "REACT_APP_VERSION": "@react_app_version"
   }
