--- a/react_timetracking/deploy-config.json
+++ b/react_timetracking/deploy-config.json
@@ -6,8 +6,8 @@
         "publishDirectory": "build",
         "environmentVariables": [
           "REACT_APP_AWS_REGION",
-          "REACT_APP_USER_POOL_ID", 
-          "REACT_APP_CLIENT_ID",
+          "REACT_APP_COGNITO_USER_POOL_ID", 
+          "REACT_APP_COGNITO_CLIENT_ID",
           "REACT_APP_NAME",
           "REACT_APP_VERSION"
         ]
