Sample configuration fix, now we use Vite. Also fix Guava deprecation warning.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 java_timetracking/.gradle/
+java_timetracking/gradle
 java_timetracking/.idea/
 java_timetracking/.vscode/
 java_timetracking/build/
 java_timetracking/bin/
-java_timetracking/gradle
+java_timetracking/gradlew
+java_timetracking/gradlew.bat
 .DS_Store
 react_timetracking/node_modules/
 react_timetracking/build/
